add jpackage for mac and windows