@@ -6,12 +6,14 @@
 
   <groupId>com.dlraudio</groupId>
   <artifactId>dbPlotter</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <name>dB Plotter</name>
 
   <properties>
+    <appModule>com.dlraudio.dbplotter</appModule>
+    <appMainClass>com.dlraudio.dbplotter.MainApp</appMainClass>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <junit.version>5.10.2</junit.version>
+    <maven.compiler.release>23</maven.compiler.release>
   </properties>
 
   <dependencies>
@@ -43,20 +45,21 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.13.0</version>
         <configuration>
-          <source>17</source>
-          <target>17</target>
+          <source>23</source>
+          <target>23</target>
+          <outputDirectory>${project.build.directory}/mods</outputDirectory>
         </configuration>
       </plugin>
+
       <plugin>
         <groupId>org.openjfx</groupId>
         <artifactId>javafx-maven-plugin</artifactId>
         <version>0.0.8</version>
         <executions>
           <execution>
-            <!-- Default configuration for running with: mvn clean javafx:run -->
             <id>default-cli</id>
             <configuration>
-              <mainClass>com.example.demo/com.example.demo.HelloApplication</mainClass>
+              <mainClass>com.dlraudio.dbplotter.MainApp</mainClass>
               <launcher>app</launcher>
               <jlinkZipName>app</jlinkZipName>
               <jlinkImageName>app</jlinkImageName>
@@ -67,6 +70,45 @@
           </execution>
         </executions>
       </plugin>
+
+      <plugin>
+        <groupId>org.panteleyev</groupId>
+        <artifactId>jpackage-maven-plugin</artifactId>
+        <version>1.6.4</version>
+
+        <configuration>
+          <name>dBPlotter</name>
+          <appVersion>${project.version}</appVersion>
+          <vendor>DLR Audio</vendor>
+          <runtimeImage>${java.home}</runtimeImage>
+          <module>${appModule}/${appMainClass}</module>
+          <modulePaths>
+            <modulePath>${project.build.directory}/mods</modulePath>
+          </modulePaths>
+          <destination>target/dist</destination>
+          <javaOptions>
+            <option>--enable-preview</option>
+            <option>-Dfile.encoding=UTF-8</option>
+          </javaOptions>
+        </configuration>
+
+        <executions>
+          <execution>
+            <id>mac</id>
+            <configuration>
+              <icon>src/main/resources/com/dlraudio/ui/images/icon.icns</icon>
+            </configuration>
+          </execution>
+          <execution>
+            <id>win</id>
+            <configuration>
+              <icon>src/main/resources/com/dlraudio/ui/images/icon.ico</icon>
+              <winMenu>true</winMenu>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
     </plugins>
   </build>
 </project>
